# ehthops

./: .gitmodules  LICENSE  README.md  pyproject.toml
dev-template/: eht_hops.sh
dev-template/hops-b1/: eht_hops.sh
dev-template/hops-b2/: eht_hops.sh
dev-template/hops-b3/: eht_hops.sh
dev-template/hops-b4/: eht_hops.sh  run_all.sh  submit_all.slurm
dev-template/scripts/: cleanup.sh  driver_cannon.sh
dev-template/share/: summary_plots_coherence.ipynb  summary_plots_cphase.ipynb  summary_plots_delays_rates.ipynb  summary_plots_polfrac.ipynb  summary_plots_rldelay.ipynb  summary_plots_rrlldelay.ipynb  summary_plots_uvcoverage.ipynb
docs/source/: components.rst  conf.py  index.rst  inspecting_output.rst  install.rst  intro.rst  pipeline_components.rst  preparing_data.rst  running.rst  setting_up_calibration.rst  tut_output_files.rst  tut_preparing_data.rst  tut_setting_up_calibration.rst  tutorial.rst  units.rst
ehthops/: ehthops_pipeline.sh  settings.config
ehthops/scripts/: cleanup.sh  driver_cannon.sh  driver_ehtcloud.sh  driver_postproc.sh  ehthops.slurmconf  ehthops_pipeline.sh  ehthops_postproc.slurmconf  ehthops_slurm.job  ehthops_slurm_v2.job  freq_info_230GHz_2021.txt  freq_info_345GHz_2021.txt  notches.py  runall_ehtops.slurmconf  settings.config
ehthops/share/: summary_plots_coherence.ipynb  summary_plots_coherence.py  summary_plots_cphase.ipynb  summary_plots_cphase.py  summary_plots_delays_rates.ipynb  summary_plots_delays_rates.py  summary_plots_polfrac.ipynb  summary_plots_polfrac.py  summary_plots_rldelay.ipynb  summary_plots_rldelay.py  (+4 more)
(+177 files in other folders)
