[project]
name = "ehthops"
version = "0.12.0"
description = "Meta-environment for running EHT-HOPS"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "seaborn",
  "astropy",
  "requests",
  "marimo",
  "tqdm",
  "pyyaml",
]

[project.optional-dependencies]
post = [
  "scikit-learn",
  "statsmodels",
  "future",
  "tables",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
]

[project.scripts]
ehthops = "ehthops.cli:main"

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
